--- a/Src/WiGO_ts/index.html
+++ b/Src/WiGO_ts/index.html
@@ -10,9 +10,10 @@
     <script src="Scripts/lodash.min.js"></script>
     <script src="Scripts/ionic-letteravatar.js"></script>
     <script src="Scripts/ngCordova/ng-cordova.min.js"></script>
+    <script src="cordova.js"></script>
     <script src="dist/app.js"></script>
 </head>
-<body ng-app="wigo.hoogo">
+<body ng-app="wigo.hoogo" >
 
     <div ng-controller="WiHomeCtrl as vm" ng-init="vm.LocalStorageCheck()"  >
         <ion-side-menus>
