Re factored to allow for set it up controller and global services

--- a/Src/WiGO_ts/index.html
+++ b/Src/WiGO_ts/index.html
@@ -35,8 +35,8 @@
 
                         </div>
                         <div class="col col-offset-33">
-                            <p class="item-note">{{vm.userdictionary.FirstName}} {{vm.userdictionary.LastName}}</p>
-                            <p class="item-dark">{{vm.userdictionary.UserName}}</p>
+                            <p class="item-note">{{vm.WiService.userdictionary.FirstName}} {{vm.WiService.userdictionary.LastName}}</p>
+                            <p class="item-dark">{{vm.WiService.userdictionary.UserName}}</p>
                         </div>
                     </div>
                     <ion-list>
